syntax = "proto3";

option go_package = "github.com/mihajlo-ra92/XML/common/rating";

package rating;

import "google/api/annotations.proto";

service RatingService{
    rpc Get(GetRequest) returns(GetResponse) {
        option (google.api.http) = {
                get: "/rating/{id}"
        };
    }
    rpc GetAll(GetAllRequest) returns(GetAllResponse){
        option (google.api.http) = {
                get: "/rating"
        };
    }
    rpc CreateRating(CreateRatingRequest) returns(CreateRatingResponse) {
    }
    rpc DeleteRating(DeleteRatingRequest) returns(DeleteRatingResponse) {
    }
}
message CreateRatingRequest {
    NewRating rating = 1;
}
message CreateRatingResponse {
    Rating rating = 1;
}

message DeleteRatingRequest{
    string jwt = 1;
    string ratingId = 2;
}

message DeleteRatingResponse{
    string message = 1;
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    Rating rating = 1;
}

message GetAllRequest{
}

message GetAllResponse{
    repeated Rating ratings = 1;
}

message Rating {
    string id = 1;
    string hostId = 2;
    string accommodationId = 3;
    string guestId = 4;
    uint32 rate = 5;
}

message NewRating {
    string hostId = 2;
    string accommodationId = 3;
    string guestId = 4;
    uint32 rate = 5;
}
